Bug 1674641 - Clean up assertions for unsigned int SIMD compares.  r=jseward

The code for unsigned i8x16 should not check that rhs != lhs since
that is not required, nor will it hold in practice.  So remove a part
of an assertion.

However the code for unsigned i16x8 and unsigned i32x4 should still
check that the inputs don't overlap the temps, since the code for
i8x16 checks that.  So add some assertions.

Differential Revision: https://phabricator.services.mozilla.com/D95483